package ru.app.object;

/** Product units of measure. Used in {@link Product}. */
public enum UnitOfMeasure {
  /** Kilograms */
  KILOGRAMS,
  /** Liters */
  LITERS,
  /** Milliliters */
  MILLILITERS,
  /** Milligrams */
  MILLIGRAMS
}
